@@ -271,6 +271,8 @@ private:
 	std::vector<healing_animation> healing_animations_;
 	std::vector<recruit_animation> recruit_animations_;
 	std::vector<idle_animation> idle_animations_;
+	std::vector<levelin_animation> levelin_animations_;
+	std::vector<levelout_animation> levelout_animations_;
     std::string flag_rgb_;
 };
 
