@@ -43,6 +43,8 @@ Version 1.3-svn:
    * units can now have a recruit animation that will be played on unit
    recruit.
    * units now have idle animations when they arn't used for some time
+   * units now have levelin animations when they level into this unit
+   * units now have levelout animations when they level out of this unit
  * multiplayer game management
    * client now tells the server if a game ended in victory or defeat 
  * multiplayer scenarios
